# iroh-git

./: Cargo.toml  LICENSE.txt  README.md
crates/git-iroh/: Cargo.toml
crates/git-iroh/src/: lfs_hook.rs  main.rs
crates/git-lfs-iroh/: Cargo.toml
crates/git-lfs-iroh/src/: main.rs
crates/git-remote-iroh/: Cargo.toml
crates/git-remote-iroh/src/: main.rs
crates/iroh-git/: Cargo.toml
crates/iroh-git-daemon/: Cargo.toml
crates/iroh-git-daemon/src/: lib.rs  main.rs
crates/iroh-git-tray/: Cargo.toml  build.rs
crates/iroh-git-tray/icons/: NOTICE.md  generate.py
crates/iroh-git-tray/src/: app.rs  main.rs
crates/iroh-git/src/: config.rs  identity.rs  lfs.rs  lib.rs  paths.rs  protocol.rs  share.rs  ticket.rs
