[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
iroh = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "net", "fs", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
toml = "0.8"
data-encoding = "2"
directories = "5"
notify = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
getrandom = "0.2"
zeroize = "1"

iroh-git = { path = "crates/iroh-git" }
