[package]
name = "iroh-git-tray"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
iroh-git-daemon = { path = "../iroh-git-daemon" }
iroh-git.workspace = true
tokio.workspace = true
anyhow.workspace = true

[build-dependencies]
embed-manifest = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Com",
  "Win32_System_Registry",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell_Common",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_HiDpi",
  "Win32_System_Console",
] }
